--- a/app/src/main/res/drawable/ovalbtn_shape.xml
+++ b/app/src/main/res/drawable/ovalbtn_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/nomarl_title_color"/>
+    <solid android:color="@color/white"/>
     <corners android:radius="360dp"/>
     <size android:width="30dp" android:height="30dp"/>
 </shape>
