--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -7,7 +7,8 @@
     <ScrollView
         android:id="@+id/article_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:overScrollMode="never">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -200,14 +201,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_back"
-            android:background="@drawable/ovalbtn_shape"/>
+            android:background="@drawable/share_btn_shape"/>
         <ImageView
             android:id="@+id/article_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_share"
             android:layout_alignParentRight="true"
-            android:background="@drawable/ovalbtn_shape"/>
+            android:background="@drawable/share_btn_shape"/>
         <ImageView
             android:id="@+id/article_fav"
             android:layout_width="wrap_content"
@@ -216,15 +217,18 @@
             android:src="@drawable/ic_fav"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/ovalbtn_shape"/>
+            android:background="@drawable/share_btn_shape"/>
         <ImageView
             android:id="@+id/article_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_comments"
             android:layout_toLeftOf="@+id/article_fav"
-            android:background="@drawable/ovalbtn_shape"/>
-
-
+            android:background="@drawable/share_btn_shape"/>
     </RelativeLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/transition"
+        android:id="@+id/transition"/>
 </FrameLayout>
