--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
+    <ImageView
+        android:id="@+id/transition_buyactivity"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/transition"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:overScrollMode="never">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
             <com.bigkoo.convenientbanner.ConvenientBanner
                 android:id="@+id/buy_viewpage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 app:canLoop="true">
-
             </com.bigkoo.convenientbanner.ConvenientBanner>
-
-
             <TextView
                 android:id="@+id/market_buy_title"
                 android:layout_height="wrap_content"
@@ -114,7 +115,7 @@
                 android:id="@+id/buy_listnum"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="12人加入了购买清单"
+                android:text="0人加入了购买清单"
                 android:textSize="12sp"
                 android:textColor="#9e9e9e"
                 android:layout_marginTop="5dp"
@@ -129,6 +130,7 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/market_userhead_recycle"
+                    android:focusable="false"
                     android:layout_height="35dp"
                     android:layout_width="0dp"
                     android:layout_weight="4"
@@ -207,21 +209,17 @@
             </LinearLayout>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/market_buy_recommend"
+                android:focusable="false"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
             </android.support.v7.widget.RecyclerView>
-
-            <TextView
-                android:layout_height="50dp"
-                android:layout_width="match_parent"
-                android:background="#F0F0F2"/>
 
         </LinearLayout>
 
     </ScrollView>
 
     <RelativeLayout
+        android:id="@+id/buy_buylayout"
         android:layout_height="50dp"
         android:layout_width="match_parent"
         android:background="@color/white"
@@ -272,6 +270,7 @@
             android:text="   +  清单"/>
 
         <Button
+            android:id="@+id/buyactivity_buy"
             android:layout_height="30dp"
             android:layout_width="80dp"
             android:layout_alignParentRight="true"
@@ -281,7 +280,6 @@
             android:textColor="@color/white"
             android:textSize="12sp"
             android:text="购买"/>
-
     </RelativeLayout>
-</FrameLayout>
+</LinearLayout>
 
