--- a/app/src/main/res/layout/activity_circlearticle.xml
+++ b/app/src/main/res/layout/activity_circlearticle.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -45,6 +46,11 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
+    <ImageView
+        android:id="@+id/circle_transition"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/transition"/>
     <ScrollView
         android:id="@+id/circle_scrollview"
         android:layout_width="match_parent"
