--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,11 +35,12 @@
             style="@style/tab_main_btn"
             android:drawableTop="@drawable/tab_list_btn"
             android:text="市集" />
-
+        <!-- photo
         <ImageView
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
+            -->
 
         <RadioButton
             android:id="@+id/rb_circle"
@@ -55,6 +56,7 @@
             android:text="我的" />
     </RadioGroup>
     </LinearLayout>
+    <!-- photo
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,6 +69,6 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_photo"/>
     </LinearLayout>
-
+-->
 
 </RelativeLayout>
