--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -77,6 +77,7 @@
                 android:layout_height="10dp"
                 android:background="@color/nomarl_divider"/>
             <RelativeLayout
+                android:id="@+id/collect"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
@@ -173,6 +174,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="55dp"
                 android:background="@color/nomarl_divider"/>
+            <!-- -->
+            <!--
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -211,7 +214,6 @@
                             android:layout_marginRight="15dp"
                             android:src="@drawable/ic_right" />
                     </RelativeLayout>
-                    <!-- 分享 关注 粉丝信息 -->
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -308,8 +310,8 @@
                         android:background="@color/nomarl_divider"
                         android:layout_marginLeft="10dp" />
                 </LinearLayout>
-
             </LinearLayout>
+            -->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -403,6 +405,7 @@
                 android:layout_height="10dp"
                 android:background="@color/nomarl_divider"/>
             <RelativeLayout
+                android:id="@+id/invite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
