--- a/app/src/main/res/layout/fragment_newest.xml
+++ b/app/src/main/res/layout/fragment_newest.xml
@@ -4,6 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/article_background">
+    <ImageView
+        android:id="@+id/circle_transition"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/transition"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/newest_recycleview"
         android:layout_width="match_parent"
