--- a/app/src/main/res/layout/item_article_comment.xml
+++ b/app/src/main/res/layout/item_article_comment.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    android:padding="20dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:textColor="@color/cardview_dark_background"
             android:text="2小时前"/>
         
     </LinearLayout>
