--- a/app/src/main/res/layout/item_information_article.xml
+++ b/app/src/main/res/layout/item_information_article.xml
@@ -42,6 +42,7 @@
             android:layout_margin="10dp"
             android:textColor="@color/nomarl_text_color"
             android:maxLength="4"
+            android:textSize="@dimen/item_textsize"
             android:text="有范儿"
             />
         <TextView
@@ -49,8 +50,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/nomarl_text_color"
+            android:textSize="@dimen/item_textsize"
             android:text="3小时前"
-            android:layout_alignTop="@+id/information_article_ietm_channelname"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_alignParentBottom="true"
             android:layout_toRightOf="@+id/information_article_ietm_channelname"
             android:layout_toEndOf="@+id/information_article_ietm_channelname" />
 
@@ -58,12 +62,13 @@
             android:id="@+id/nformation_article_ietm_looknum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="bottom"
+            android:gravity="center"
+            android:textSize="@dimen/item_textsize"
             android:text="100"
             android:drawableRight="@drawable/ic_eye"
             android:layout_alignTop="@+id/information_article_ietm_time"
             android:layout_marginRight="5dp"
-            android:drawablePadding="2dp"
+            android:drawablePadding="3dp"
             android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
