--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_gravity="center_horizontal"
+                android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
@@ -59,6 +60,7 @@
                 android:id="@+id/market_buy_jianjie"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:gravity="center"
                 android:layout_margin="15dp"
                 android:textSize="12sp"
                 />
