--- a/app/src/main/res/drawable/getcode_shape.xml
+++ b/app/src/main/res/drawable/getcode_shape.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:state_enabled="false">
         <shape>
-            <solid android:color="#b45a35" />
+            <solid android:color="@color/article_background" />
             <corners android:radius="15dp" />
         </shape>
     </item>
