--- a/app/src/main/res/layout/activity_circlearticle.xml
+++ b/app/src/main/res/layout/activity_circlearticle.xml
@@ -3,154 +3,198 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/cardview_dark_background">
+            <com.android.lala.view.CircleImageView
+                android:id="@+id/back"
+                android:padding="8dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/ovalbtn_white_shape"
+                android:src="@drawable/ic_left"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="详情"
+                android:textSize="19sp"
+                android:textColor="@color/white" />
+            <TextView
+                android:id="@+id/circle_louzhu"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:background="@drawable/ovalbtn_white_shape"
+                android:layout_toLeftOf="@+id/circle_more"
+                android:layout_marginRight="20dp"
+                android:text="楼主"
+                android:textColor="@color/classf"
+                android:layout_centerVertical="true"
+                android:textSize="11sp"/>
+            <com.android.lala.view.CircleImageView
+                android:padding="8dp"
+                android:id="@+id/circle_more"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ovalbtn_white_shape"
+                android:src="@drawable/ic_more"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+        <ImageView
+            android:id="@+id/circle_transition"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:background="@mipmap/transition"/>
+        <ScrollView
+            android:id="@+id/circle_scrollview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/circlearticle_author_background"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp">
+                    <com.android.lala.view.CircleImageView
+                        android:id="@+id/circlearticle_author_head"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp" />
+                    <TextView
+                        android:id="@+id/circlearticle_author_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/nomarl_title_color"
+                        android:textSize="14sp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toRightOf="@+id/circlearticle_author_head"
+                        android:text="升起的新阳"/>
+                    <TextView
+                        android:id="@+id/circlearticle_author_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/circlearticle_author_name"
+                        android:layout_alignLeft="@+id/circlearticle_author_name"
+                        android:layout_marginLeft="5dp"
+                        android:textSize="11sp"
+                        android:text="两小时前"/>
+                    <TextView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:background="@drawable/louzhu_shape"
+                        android:layout_toRightOf="@+id/circlearticle_author_name"
+                        android:text="楼主"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:drawablePadding="10dp"
+                        android:text="赞"
+                        android:drawableLeft="@drawable/ic_zan"/>
+                </RelativeLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/nomarl_divider"/>
+                <WebView
+                    android:id="@+id/circlearticle_author_webview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></WebView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="10dp"
+                        android:background="@drawable/ic_comment_full"/>
+                    <TextView
+                        android:id="@+id/commentlocation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/nomarl_title_color"
+                        android:text="最新评论"/>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/nomarl_divider"/>
+
+
+                <com.android.lala.view.MyListView
+                    android:id="@+id/circlearticle_commentlist"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="@null">
+                </com.android.lala.view.MyListView>
+                <TextView
+                    android:id="@+id/empty_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:gravity="center"
+                    android:text="暂无评论"/>
+            </LinearLayout>
+
+        </ScrollView>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/cardview_dark_background">
-        <com.android.lala.view.CircleImageView
-            android:id="@+id/back"
-            android:padding="8dp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/ovalbtn_white_shape"
-            android:src="@drawable/ic_left"/>
+        android:background="@color/commentbackground">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="详情"
-            android:textSize="19sp"
-            android:textColor="@color/white" />
-        <TextView
-            android:id="@+id/circle_louzhu"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:background="@drawable/ovalbtn_white_shape"
-            android:layout_toLeftOf="@+id/circle_more"
-            android:layout_marginRight="20dp"
-            android:text="楼主"
-            android:textColor="@color/classf"
-            android:layout_centerVertical="true"
-            android:textSize="11sp"/>
-        <com.android.lala.view.CircleImageView
-            android:padding="8dp"
-            android:id="@+id/circle_more"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ovalbtn_white_shape"
-            android:src="@drawable/ic_more"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"/>
-    </RelativeLayout>
-    <ImageView
-        android:id="@+id/circle_transition"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/transition"/>
-    <ScrollView
-        android:id="@+id/circle_scrollview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+            android:id="@+id/edit_btn"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/circlearticle_author_background"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop" />
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp">
-                <com.android.lala.view.CircleImageView
-                    android:id="@+id/circlearticle_author_head"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp" />
-                <TextView
-                    android:id="@+id/circlearticle_author_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/nomarl_title_color"
-                    android:textSize="14sp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toRightOf="@+id/circlearticle_author_head"
-                    android:text="升起的新阳"/>
-                <TextView
-                    android:id="@+id/circlearticle_author_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/circlearticle_author_name"
-                    android:layout_alignLeft="@+id/circlearticle_author_name"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="11sp"
-                    android:text="两小时前"/>
-                <TextView
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:background="@drawable/louzhu_shape"
-                    android:layout_toRightOf="@+id/circlearticle_author_name"
-                    android:text="楼主"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:drawablePadding="10dp"
-                    android:text="赞"
-                    android:drawableLeft="@drawable/ic_zan"/>
-            </RelativeLayout>
+            android:layout_height="30dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:layout_toLeftOf="@+id/comment_num"
+            android:background="@drawable/comment_shape"
+            android:hint="说点什么..."
+            android:textSize="13sp"
+            android:layout_centerVertical="true" />
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/nomarl_divider"/>
-            <WebView
-                android:id="@+id/circlearticle_author_webview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"></WebView>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:background="@drawable/ic_comment_full"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:textColor="@color/nomarl_title_color"
-                    android:text="最新评论"/>
-            </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/nomarl_divider"/>
-
-
-            <com.android.lala.view.MyListView
-                android:id="@+id/circlearticle_commentlist"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </com.android.lala.view.MyListView>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:id="@+id/comment_num"
                 android:gravity="center"
-                android:text="暂无评论"/>
-        </LinearLayout>
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_alignParentRight="true"
+                android:drawableLeft="@drawable/ic_comment2"
+                android:drawablePadding="5dp"
+                android:textColor="@color/classf"
+                android:text="0"  />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/nomarl_divider"/>
+    </RelativeLayout>
 
-    </ScrollView>
 
 
 
