--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/market_scrollview"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    >
+    <ScrollView
+        android:id="@+id/market_scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
           <com.bigkoo.convenientbanner.ConvenientBanner
             android:id="@+id/market_viewpage"
             android:layout_width="match_parent"
@@ -45,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/icon_haodianyouli"/>
+                    android:src="@drawable/ic_fenlei"/>
                 <ImageView
                     android:id="@+id/qiandao"
                     android:layout_width="wrap_content"
@@ -97,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="好店有礼"
+                    android:text="分类"
                     android:textColor="@color/nomarl_title_color"
                     android:textSize="12sp" />
 
@@ -218,4 +223,6 @@
                     android:layout_height="match_parent"/>
 </LinearLayout>
 
-</ScrollView>
+    </ScrollView>
+
+</LinearLayout>
